Added new functionalities
