# src/routes/auth.routes.js
@@ -1,6 +1,10 @@
 import express from 'express';
 import authController from '../controllers/auth.controller.js';
-import { authenticateAdminToken, rateLimiter } from '../middleware/auth.middleware.js';
+import {
+  authenticateAdminToken,
+  authenticateToken,
+  rateLimiter,
+} from '../middleware/auth.middleware.js';
 import multer from 'multer';
 import path from 'path';
 import { fileURLToPath } from 'url';
@@ -14,31 +18,33 @@ const standardLimit = rateLimiter(15, 15 * 60 * 1000); // 15 requests per 15 min
 const __dirname = dirname(fileURLToPath(import.meta.url));
 
 // Configure multer for file uploads
-const storage = multer.diskStorage({
-  destination: function(req, file, cb) {
+export const storage = multer.diskStorage({
+  destination: function (req, file, cb) {
     cb(null, path.join(__dirname, '../uploads/profiles/'));
   },
-  filename: function(req, file, cb) {
+  filename: function (req, file, cb) {
     cb(null, `${Date.now()}-${path.basename(file.originalname)}`);
-  }
+  },
 });
 
-const upload = multer({ 
+export const upload = multer({
   storage,
-  limits: { fileSize: 5 * 1024 * 1024 }, // 5MB limit
+  limits: { fileSize: 3 * 1024 * 1024 }, // 3MB limit
   fileFilter: (req, file, cb) => {
     const allowedTypes = ['image/jpeg', 'image/png', 'image/jpg'];
     if (allowedTypes.includes(file.mimetype)) {
       cb(null, true);
     } else {
-      cb(new Error('Invalid file type. Only JPEG, PNG and JPG are allowed.'), false);
+      cb(
+        new Error('Invalid file type. Only JPEG, PNG and JPG are allowed.'),
+        false
+      );
     }
-  }
+  },
 });
 
-// Admin routes, changd back to strictLimit later
+// Admin routes, change back to strictLimit later
 router.post('/admin/login', strictLimit, authController.adminLogin);
-router.post('/admin/invite', authenticateAdminToken, authController.inviteResearcher);
 
 // Researcher routes
 router.post('/researcher/login', standardLimit, authController.researcherLogin);
@@ -47,7 +53,14 @@ router.post('/researcher/login', standardLimit, authController.researcherLogin);
 router.post('/refresh-token', authController.refreshToken);
 router.post('/logout', authController.logout);
 
+// Token verification route
+router.get('/verify-token', authenticateToken, authController.verifyToken);
+
 // Researcher profile completion from invitation
-router.post('/complete-profile/:token', upload.single('profilePicture'), authController.completeProfile);
+router.post(
+  '/complete-profile/:token',
+  upload.single('profilePicture'),
+  authController.completeProfile
+);
 
 export default router;
